--- a/index.html
+++ b/index.html
@@ -57,9 +57,57 @@
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">
-                            about me
-                        </h3>
+                        <h3 class="section-heading uppercase">about me</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What Do I Do?</h4>
+                                <p>
+                                    Displays an element as an inline-level grid container
+                                    inline-table The element is displayed as an inline-level table
+                                    list-item Let the element behave like a element
+                                    run-in Displays an element as either block or inline, depending on context
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How Do I Do It?</h4>
+                                <p>
+                                    Displays an element as an inline-level grid container
+                                    inline-table The element is displayed as an inline-level table
+                                    list-item Let the element behave like a element
+                                    run-in Displays an element as either block or inline, depending on context
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why Hire Me?</h4>
+                                <p>
+                                    Displays an element as an inline-level grid container
+                                    inline-table The element is displayed as an inline-level table
+                                    list-item Let the element behave like a element
+                                    run-in Displays an element as either block or inline, depending on context
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
