--- a/resume.html
+++ b/resume.html
@@ -61,9 +61,23 @@
                             Work History
                         </h3>
                     </div>
-                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                        <h4>National College of Art and Design</h4>
-                        <p>Sculptor in residence</p>
+                    <div class="history-items">
+                        <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                            <h4>National College of Art and Design (NCAD)</h4>
+                            <p>Sculptor in residence</p>
+                        </div>
+                        <div class="timeline-item" data-dates="04/2004 - 06/2008">
+                            <h4>Fisher and Diaz</h4>
+                            <p>Junior Embalmer</p>
+                        </div>
+                        <div class="timeline-item" data-dates="06/2008 - 06/2011">
+                            <h4>Phantom Design</h4>
+                            <p>Junior Front End Developer</p>
+                        </div>
+                        <div class="timeline-item" data-dates="06/2011 - Present">
+                            <h4>Hooli Silicon Valley</h4>
+                            <p>Full Stack Web Developer</p>
+                        </div>
                     </div>
                 </div>
             </div>
